Fix transparent background when sorting columns, causing sortable placeholder to be visible inside column

--- a/src/css/builder/sections/sections.css
+++ b/src/css/builder/sections/sections.css
@@ -18,6 +18,7 @@
 	height: calc(100% - 35px);
 	border: 1px solid #ddd;
 	border-top: 0;
+	background-color: #fff;
 }
 .ttfmake-section-text .ttfmake-section-body,
 .ttfmake-section-gallery .ttfmake-section-body {
